--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -5,6 +5,10 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
+
+.presentation {
+    margin-bottom: 2rem;
+}
  
 .title {
     font-family: var(--fonte-secundaria);
@@ -22,7 +26,8 @@
  
 .image {
     position: relative;
-    height: 406px;
+    height: 420px;
+    
 }
  
 .image > .myPhoto {
@@ -37,9 +42,10 @@
     position: absolute;
     right: 7vw;
     bottom: 2.2vw;
-    width: 25vw;
+    width: 22vw;
 }
- 
+
+
 @media (max-width: 1100px) {    
     .banner {
         padding: 3.5rem 1.5rem;
